[package]
name = "discord-bedtime"
version = "0.1.0"
authors = ["Benjamin Levy <blevy@protonmail.com>"]
edition = "2018"

[dependencies]
serenity = "0.6.3"
chrono = "0.4.7"
clokwerk = "0.2.1"
num_cpus = "1.10.1"
lazy_static = "1.3.0"
serde_json = "1.0.40"

[dependencies.chrono-tz]
version = "0.5.1"
features = ["serde"]

[dependencies.serde]
version = "1.0.98"
features = ["derive"]
