[package]
name = "discord-bedtime"
version = "0.1.0"
authors = ["Benjamin Levy <blevy@protonmail.com>"]
edition = "2018"

[dependencies]
serenity = "0.6.3"
chrono = "0.4.19"
clokwerk = "0.3.5"
num_cpus = "1.13.1"
lazy_static = "1.4.0"
serde_json = "1.0.81"

[dependencies.chrono-tz]
version = "0.6.1"
features = ["serde"]

[dependencies.serde]
version = "1.0.137"
features = ["derive"]
