[package]
name = "discord-bedtime"
version = "0.1.0"
authors = ["Benjamin Levy <blevy@protonmail.com>"]
edition = "2018"

[dependencies]
serenity = "0.11.2"
chrono = "0.4.19"
clokwerk = "0.4.0-rc1"
num_cpus = "1.13.1"
lazy_static = "1.4.0"
serde_json = "1.0.81"

[dependencies.tokio]
version = "1.20.4"
features = ["macros", "rt-multi-thread"]

[dependencies.chrono-tz]
version = "0.6.1"
features = ["serde"]

[dependencies.serde]
version = "1.0.137"
features = ["derive"]
